<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/account_details"
            android:icon="@drawable/account"
            android:title="@string/account_details" />

        <item
            android:id="@+id/request_consumables"
            android:icon="@drawable/consumable_black"
            android:title="@string/consumable" />

        <item
            android:id="@+id/findtech"
            android:icon="@drawable/find"
            android:title="@string/find" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/about_us"
            android:title="@string/about" />
    </group>
</menu>
