<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.SignupLoginActivity">


    <ViewFlipper
        android:id="@+id/v_flip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" >
    </ViewFlipper>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginBottom="139dp"
            android:layout_marginHorizontal="120dp"
            app:layout_constraintVertical_bias="0.84" />


    <Button
        android:id="@+id/sign_up"
        android:layout_width="185dp"
        android:layout_height="43dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="139dp"
        android:background="@drawable/round_transparent_buttons"
        android:text="@string/signupBtn"
        android:textColor="#ff0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626">

    </Button>


    <Button
        android:id="@+id/login"
        android:layout_width="185dp"
        android:layout_height="43dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="425dp"
        android:layout_marginBottom="139dp"
        android:background="@drawable/round_buttons"
        android:text="@string/loginBtn"
        android:textColor="#F6F3F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726"></Button>

    <Button
        android:id="@+id/skip"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="544dp"
        android:layout_marginBottom="139dp"
        android:background="@android:color/transparent"
        android:text="@string/skipBtn"
        android:textColor="#040000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </Button>

</RelativeLayout>
